snapshots/tests/project/environment/environment_testme_project_load.snap
---
source: vb6parse/tests/project/environment.rs
expression: project
---
project_type: Exe
references:
  - uuid: 00020430-0000-0000-c000-000000000046
    unknown1: "2.0"
    unknown2: "0"
    path: "..\\..\\..\\..\\Windows\\system32\\stdole2.tlb"
    description: OLE Automation
  - uuid: 778faca7-c845-4169-9e9d-a67b895d2d82
    unknown1: "1.0"
    unknown2: "0"
    path: m2000.exe
    description: M2000
objects: []
modules: []
classes: []
related_documents: []
property_pages: []
designers: []
forms:
  - testme.frm
user_controls: []
user_documents: []
other_properties: {}
properties:
  unused_control_info: Remove
  upgrade_controls: Upgrade
  res_file_32_path: ""
  icon_form: Form1
  startup: Form1
  help_file_path: ""
  title: testme
  exe_32_file_name: ""
  exe_32_compatible: ""
  dll_base_address: 0
  path_32: ""
  command_line_arguments: ""
  name: Project1
  description: ""
  debug_startup_component: ""
  help_context_id: "0"
  compatibility_mode: NoCompatibility
  version_32_compatibility: ""
  version_info:
    major: 1
    minor: 0
    revision: 0
    auto_increment_revision: 0
    company_name: space
    file_description: ""
    copyright: ""
    trademark: ""
    product_name: ""
    comments: ""
  server_support_files: Local
  conditional_compile: ""
  compilation_type:
    NativeCode:
      optimization_type: FavorFastCode
      favor_pentium_pro: "False"
      code_view_debug_info: NotCreated
      aliasing: AssumeAliasing
      bounds_check: CheckBounds
      overflow_check: CheckOverflow
      floating_point_check: CheckFloatingPointError
      pentium_fdiv_bug_check: CheckPentiumFDivBug
      unrounded_floating_point: DoNotAllow
  start_mode: StandAlone
  unattended: Interactive
  retained: UnloadOnExit
  thread_per_object: 0
  threading_model: ApartmentThreaded
  max_number_of_threads: 1
  debug_startup_option: WaitForComponentCreation
  use_existing_browser: Use
